fixed grey tile text spacing issue by pulling out pdp styles into own scss file so the cascading is correct

--- a/theme/sass/_dyneema.scss
+++ b/theme/sass/_dyneema.scss
@@ -219,7 +219,7 @@
     color: #333;
 
     h3 {
-      margin: 10% auto 5%;
+      margin: 5% auto 0;
       width: 80%;
       font-family: 'PF DIN Text Pro Bold';
       letter-spacing: .4vw;
